--- a/pages/practice/practice.wxml
+++ b/pages/practice/practice.wxml
@@ -1,9 +1,10 @@
-<text>pages/practice/practice.wxml</text>
+
 <view class="container">
   <!-- 选择练习模式部分 -->
   <view class="practice-mode-section">
     <view class="section-header">
       <icon type="list" size="20"></icon>
+      <image src="/assets/icons/PracticemodOutline_32px.svg" class="modehead"></image>
       <text>选择练习模式</text>
     </view>
     <view class="recommend">
@@ -13,14 +14,14 @@
     <view class="practice-mode-list">
       <view class="mode-item" bindtap="selectBasicPractice" style="background-color: #007AFF; color: white;">
         <view class="mode-icon">
-          <image src="/assets/icons/FinishOutline_32px.svg" class="modeicons"></image>
+          <image src="/assets/icons/BasicpacticeOutline_32px.svg" class="modeicons"></image>
         </view>
         <view class="mode-title">基础练习</view>
         <view class="mode-desc">自由答题，时间不限</view>
       </view>
       <view class="mode-item" bindtap="selectTimedChallenge" style="background-color: #4CD964; color: white;">
         <view class="mode-icon">
-          <icon type="clockcircle" size="30"></icon>
+            <image src="/assets/icons/TimedchallengeOutline_32px.svg" class="modeicons"></image>
         </view>
         <view class="mode-title">计时挑战</view>
         <view class="mode-desc">限时回答，提高速度</view>
@@ -28,14 +29,14 @@
       </view>
       <view class="mode-item" bindtap="selectWrongQuestionTraining" style="background-color: #FF9500; color: white;">
         <view class="mode-icon">
-          <icon type="warn" size="30"></icon>
+            <image src="/assets/icons/WrongchangeOutline_32px.svg" class="modeicons"></image>
         </view>
         <view class="mode-title">错题训练</view>
         <view class="mode-desc">针对性解决薄弱点</view>
       </view>
       <view class="mode-item" bindtap="selectLevelMode" style="background-color: #FF3B30; color: white;">
         <view class="mode-icon">
-          <icon type="star" size="30"></icon>
+            <image src="/assets/icons/LevelpracticeOutline_32px.svg" class="modeicons"></image>
         </view>
         <view class="mode-title">闯关模式</view>
         <view class="mode-desc">逐级挑战，收集成就</view>
@@ -47,6 +48,7 @@
   <view class="daily-practice-section">
     <view class="section-header">
       <icon type="edit" size="20"></icon>
+      <image src="/assets/icons/EventpracticeOutline_32px.svg" class="modehead"></image>
       <text>每日练习</text>
     </view>
     <view class="section-desc">已完成今日 0/10 题，坚持练习获得额外奖励！</view>
@@ -57,6 +59,7 @@
   <view class="personalized-study-plan-section">
     <view class="section-header">
       <icon type="star" size="20"></icon>
+      <image src="/assets/icons/LikestudyOutline_32px.svg" class="modehead"></image>
       <text>个性化学习计划</text>
     </view>
     <view class="section-desc">根据您的学习情况，我们为您推荐以下专题训练</view>
