--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 140px;
 }
 .user-info-section {
   width: 90%;
@@ -30,8 +31,8 @@
   margin-left: 50rpx;
 }
 .avatar {
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
 }
 .user-name-class {
   display: flex;
