--- a/pages/user-profile-detail/user-profile-detail.wxss
+++ b/pages/user-profile-detail/user-profile-detail.wxss
@@ -18,9 +18,9 @@
   margin-bottom: 40rpx;
 }
 .avatar {
-  width: 96%;
-  height: 96%;
-  border-radius: 48%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 .defaultavatar {
   width: 100%;
@@ -59,6 +59,7 @@
   border-bottom: 1rpx solid #e0e0e0;
   padding-bottom: 30rpx;
   height: 120rpx;
+  padding-right: 20rpx;
 }
 .label {
   display: flex;
