--- a/pages/wrongQuestionTraining/wrongQuestionTraining.wxml
+++ b/pages/wrongQuestionTraining/wrongQuestionTraining.wxml
@@ -1,158 +1,182 @@
 <view class="container">
     <view class="question-select" wx:if="{{!isPractice}}">
-    <view class="detail-title">
-        <text>错题分类</text>
-    </view>
-    <!-- 横向分类筛选器 -->
-    <scroll-view class="category-scroll" scroll-x>
-        <view 
-        class="category-item {{currentCategory === 'all' ? 'active' : ''}}" 
-        data-category="all" 
-        bindtap="handleCategoryChange"
-        >
-        全部
+        <view class="detail-title">
+            <text>错题分类</text>
         </view>
-        <view 
-        class="category-item {{currentCategory === '加法' ? 'active' : ''}}" 
-        data-category="加法" 
-        bindtap="handleCategoryChange"
-        >
-        加法
-        </view>
-        <view 
-        class="category-item {{currentCategory === '减法' ? 'active' : ''}}" 
-        data-category="减法" 
-        bindtap="handleCategoryChange"
-        >
-        减法
-        </view>
-        <view 
-        class="category-item {{currentCategory === '乘法' ? 'active' : ''}}" 
-        data-category="乘法" 
-        bindtap="handleCategoryChange"
-        >
-        乘法
-        </view>
-        <view 
-        class="category-item {{currentCategory === '除法' ? 'active' : ''}}" 
-        data-category="除法" 
-        bindtap="handleCategoryChange"
-        >
-        除法
-        </view>
-        <view 
-        class="category-item {{currentCategory === '混合' ? 'active' : ''}}" 
-        data-category="混合" 
-        bindtap="handleCategoryChange"
-        >
-        混合
-        </view>
-    </scroll-view>
+        <!-- 横向分类筛选器 -->
+        <scroll-view class="category-scroll" scroll-x enable-flex="true">
+            <view 
+            class="category-item {{currentCategory === 'all' ? 'active' : ''}}" 
+            data-category="all" 
+            bindtap="handleCategoryChange"
+            >
+            全部
+            </view>
+            <view 
+            class="category-item {{currentCategory === '加法' ? 'active' : ''}}" 
+            data-category="加法" 
+            bindtap="handleCategoryChange"
+            >
+            加法
+            </view>
+            <view 
+            class="category-item {{currentCategory === '减法' ? 'active' : ''}}" 
+            data-category="减法" 
+            bindtap="handleCategoryChange"
+            >
+            减法
+            </view>
+            <view 
+            class="category-item {{currentCategory === '乘法' ? 'active' : ''}}" 
+            data-category="乘法" 
+            bindtap="handleCategoryChange"
+            >
+            乘法
+            </view>
+            <view 
+            class="category-item {{currentCategory === '除法' ? 'active' : ''}}" 
+            data-category="除法" 
+            bindtap="handleCategoryChange"
+            >
+            除法
+            </view>
+            <view 
+            class="category-item {{currentCategory === '混合运算' ? 'active' : ''}}" 
+            data-category="混合运算" 
+            bindtap="handleCategoryChange"
+            >
+            混合
+            </view>
+        </scroll-view>
 
-    <!-- 全选/清空按钮 -->
-    <view class="select-buttons">
-        <view class="left">已选择:<span>{{selectedCount}}题</span></view>
-        <view class="right">
-            <view bindtap="selectAll" class="buttons">全选</view>
-            <view bindtap="clearAll" class="buttons">清空</view>
-        </view>
-    </view>
-
-    <!-- 题目列表 -->
-     <block wx:for="{{questions}}" wx:key="id" class="question-box">
-    <view class="question-item">
-        <view class="circle" bindtap="handleQuestionClick" data-id="{{item.id}}"
-        >
-        <!-- 勾勾文本 -->
-            <text wx:if="{{ item.selected ? 'selected' : ''}}" class="checkmark">✅</text>
+        <!-- 全选/清空按钮 -->
+        <view class="select-buttons">
+            <view class="left">已选择:<span>{{selectedCount}}题</span></view>
+            <view class="right">
+                <view bindtap="selectAll" class="buttons">全选</view>
+                <view bindtap="clearAll" class="buttons">清空</view>
+            </view>
         </view>
 
-            <!-- 右侧内容区域 -->
-        <view class="right-content">
-        <!-- 右侧上部框 -->
-        <view class="right-top-box">{{item.question}}</view>
-        <!-- 右侧下部虚线框 -->
-        <view class="right-bottom-box">
-            <!-- 虚线框内部内容 -->
-            <view class="dashed-box"></view>
-            <text class="category-label">{{item.category}}</text>
-            <text>错误{{item.errors}}次 {{item.date}}</text>
-        </view>
-        </view>
-       
+        <!-- 题目列表 -->
+        <block wx:for="{{questions}}" wx:key="id" class="question-box" >
+        <view class="question-item">
+            <view class="circle {{ item.selected ? 'selected' : ''}}" bindtap="handleQuestionClick" data-id="{{item.id}}"
+            >
+            <!-- 勾勾文本 -->
+                <image  src="/assets/icons/BasicpacticeOutline_32px.svg" class="checkmark"></image>
+            </view>
+
+                <!-- 右侧内容区域 -->
+            <view class="right-content">
+                <view class="right-top-box">{{item.question}}</view>
+            <view class="right-bottom-box">
+                <view class="dashed-box"></view>
+                <text class="category-label" style="background-color: {{categoryColorMap[item.category] || '#f0f0f0'}}" >{{item.category}}</text>
+                <text class="error-label">错误{{item.errors}}次 {{item.date}}</text>
+            </view>
+            </view>
         
-    </view>
-    </block>
+            
+        </view>
+        </block>
 
 
-        <!-- 开始训练按钮 -->
+            <!-- 开始训练按钮 -->
         <view bindtap="startTraining" class="start-btn">
-            开始专项训练 ({{selectedCount}}题)  
+                开始专项训练 ({{selectedCount}}题)  
         </view>
     </view>
     <view class="test-container"  wx:if="{{isPractice}}">
-  <view class="progress-bar">
-    <view class="progress-fill" style="width: {{currentQuestionIndex * (100 / selectedCount)}}%"></view>
-  </view>
+
+        <view class="progress-bar" wx:if="{{!isComplete}}">
+            <view class="progress-fill" style="width: {{currentQuestionIndex * (100 / selectedCount)}}%"></view>
+        </view>
   
-  <view class="test">
-    <view class="test-text">第{{currentQuestionIndex}}题/剩余{{selectedCount - currentQuestionIndex}}题</view>
+        <view class="test">
+            <view class="test-text"  wx:if="{{!isComplete}}">第{{currentQuestionIndex}}题/共{{selectedCount}}题</view>
+            <view class="current-question" wx:if="{{!isComplete}}">
+            <text class="question-text">{{currentQuestion.question}}</text>
+            <input 
+                class="answer-input" 
+                type="number" 
+                placeholder="请输入答案" 
+                value="{{userAnswers[currentQuestion.id] || ''}}" 
+                bindinput="onAnswerInput"
+            />
+            </view>
+            <!-- 做完题目出现勾 -->
+            <view wx:if="{{isComplete}}" class="container-Outlin">
+                <image class="isCompleteOutlin"  src="/assets/icons/isCompleteOutline_32px.svg" ></image>
+            </view>
+                
+            <view class="result-tip" wx:if="{{showResult}}">
+            <text class="{{resultType}}">{{resultMessage}}</text>
+            <text wx:if="{{!isComplete}}">正确答案：{{currentQuestion.correctAnswer}}</text>
+            </view>
 
-    <view class="current-question" wx:if="{{!isComplete}}">
-      <text class="question-text">{{currentQuestion.question}}</text>
-      <input 
-        class="answer-input" 
-        type="number" 
-        placeholder="请输入答案" 
-        value="{{userAnswers[currentQuestion.id] || ''}}" 
-        bindinput="onAnswerInput"
-      />
-    </view>
+            <view wx:if="{{isComplete}}" class="complete-tip">
+            <text>你已经完成了{{selectedCount}}道题目的练习，正确率达{{correctCount/selectedCount*100}}%</text>   
+            </view>
 
-    <view class="result-tip" wx:if="{{showResult}}">
-      <text class="{{resultType}}">{{resultMessage}}</text>
-      <text wx:if="{{!isComplete}}">正确答案：{{currentQuestion.correctAnswer}}</text>
-    </view>
 
-    <image 
-      wx:if="{{isComplete}}" 
-      src="/assets/gif/celebration.gif" 
-      mode="widthFix" 
-      class="gif-image"
-    ></image>
-    <view wx:if="{{isComplete}}" class="complete-tip">
-      <text>全部题目完成！</text>
-    </view>
+            <view class="button-group"    wx:if="{{!isComplete}}"  >
+            <view 
+                class="next-btn" 
+                bindtap="checkAnswer"
+            >
+                {{isChecking ? '出题...' : '提交答案'}}
+            </view>
+            <view class="end-practic-button" bindtap="showEndModal">结束训练</view>
+            </view>
+            
+        </view>
 
-    <view class="button-group">
-      <button 
-        class="next-btn" 
-        wx:if="{{!isComplete}}" 
-        bindtap="checkAnswer"
-      >
-        {{isChecking ? '出题...' : '提交答案'}}
-      </button>
-    </view>
-  </view>
+        <view class="isComplete-button-group"    wx:if="{{isComplete}}"  >
+                <view class="return-wrongQuestion-button" bindtap="handleReturnToWrongQuestions">返回错题本</view>
+                <view class="return-practic-button" bindtap="handleReturnToPractice">返回练习中心</view>
+        </view>
 
-  <view class="test-detail">
-    <view class="test-detai2">
-      <view class="detail-title">
-        <text>当前进度</text>
-      </view>
-      <view class="detail-label">
-        <text class="detail-sum">总进度</text>
-        <text>{{currentQuestionIndex}}/{{selectedCount}}</text>
-      </view>
-      <view class="detail-label">
-        <text>本次正确</text>
-        <text class="detail-value">{{correctCount}}题</text>
-      </view>
-      <view class="detail-label">
-        <text>本次错误</text>
-        <text class="detail-value">{{errorCount}}题</text>
-      </view>
+        <view class="test-detail" wx:if="{{!isComplete}}" >
+            <view class="test-detai2">
+            <view class="detail-title">
+                <text>当前进度</text>
+            </view>
+            <view class="detail-label">
+                <text class="detail-sum">总进度</text>
+                <text>{{currentQuestionIndex}}/{{selectedCount}}</text>
+            </view>
+            <view class="detail-label">
+                <text>本次正确</text>
+                <text class="detail-value">{{correctCount}}题</text>
+            </view>
+            <view class="detail-label">
+                <text>本次错误</text>
+                <text class="detail-value">{{errorCount}}题</text>
+            </view>
+            </view>
+        </view>
+        <view class="test-detail2" wx:if="{{isComplete}}" >
+            <view class="test-detai2">
+                <view class="detail-title">
+                    <text>答案详情</text>
+                </view>
+                <block wx:for="{{answerRecords}}" wx:key="id">
+                    <view class="detail-label2">
+                    <text class="detail-sum">{{item.question}}</text>
+                    <text 
+                        wx:if="{{item.isCorrect}}" 
+                        style="color: #52c41a; margin-left: 8px;"
+                    >{{item.userAnswer}}√</text>
+                    <text 
+                    wx:else 
+                    style="color: #ff4d4f; margin-left: 8px;"
+                    >{{item.userAnswer}}×({{item.correctAnswer}})</text>
+                    </view>
+                </block>
+            </view>
+        </view>
+
     </view>
-  </view>
-</view>
+       
 </view>
